build-logs-failed/build-ua-parser-0.7.7.0.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - ua-parser-0.7.7.0 (lib) (first run)
 - ua-parser-0.7.7.0 (test:test) (first run)
Configuring library for ua-parser-0.7.7.0...
Preprocessing library for ua-parser-0.7.7.0...
Building library for ua-parser-0.7.7.0...
[1 of 1] Compiling Web.UAParser
Configuring test suite 'test' for ua-parser-0.7.7.0...
Preprocessing test suite 'test' for ua-parser-0.7.7.0...
Building test suite 'test' for ua-parser-0.7.7.0...
[1 of 3] Compiling Web.UAParser
[2 of 3] Compiling Web.UAParser.SuiteUtils

src/Web/UAParser/SuiteUtils.hs:101:29: error: [GHC-83865]
    • Couldn't match expected type ‘Key’ with actual type ‘Text’
    • In the second argument of ‘(A..:?)’, namely ‘k’
      In the second argument of ‘(<$>)’, namely ‘(o A..:? k)’
      In the expression: join <$> (o A..:? k)
    |
101 | o .:? k = join <$> (o A..:? k)
    |                             ^
Error: [Cabal-7125]
Failed to build test:test from ua-parser-0.7.7.0.

